test/typeCheckTest/pass/test11.ic
class SimpleWhile {
	void testWhile () {
		while (true) {
		
		}
	}
	
	void main (string [] args) {
	
	}
}