test/typeCheckTest/fail/test33.ic
class BadAnd {
	void main (string [] args) {
		boolean b = true && null;
	}
}